
   * Fix log against smart server branches that don't support tags.
     (James Westby, #140615)

   * Fix pycurl http implementation by defining error codes from
     pycurl instead of relying on an old curl definition.
     (Vincent Ladeuil, #147530)

   * Fix 'unprintable error' message when displaying BzrCheckError and 
     some other exceptions on Python 2.5.
     (Martin Pool, #144633)

   * Handles default value for ListOption in cmd_commit.
     (Vincent Ladeuil, #140432)

   * HttpServer and FtpServer need to be closed properly or a listening socket
     will remain opened.
     (Vincent Ladeuil, #140055)

   * Monitor the .bzr directory created in the top level test
     directory to detect leaking tests.
     (Vincent Ladeuil, #147986)

   * The basename, not the full path, is now used when checking whether
     the profiling dump file begins with ``callgrind.out`` or not. This
     fixes a bug reported by Aaron Bentley on IRC. (Ian Clatworthy)

   * Trivial fix for invoking command ``reconfigure`` without arguments.
     (Rob Weir, #141629)

   * ``WorkingTree.rename_one`` will now raise an error if normalisation of the
     new path causes bzr to be unable to access the file. (Robert Collins)

   * Correctly detect a NoSuchFile when using a filezilla server. (Gary van der
     Merwe)

  API BREAKS:

   * ``bzrlib.index.GraphIndex`` now requires a size parameter to the
     constructor, for enabling bisection searches. (Robert Collins)

   * ``CommitBuilder.record_entry_contents`` now requires the root entry of a
     tree be supplied to it, previously failing to do so would trigger a
     deprecation warning. (Robert Collins)

   * ``KnitVersionedFile.add*`` will no longer cache added records even when
     enable_cache() has been called - the caching feature is now exclusively for
     reading existing data. (Robert Collins)

   * ``ReadOnlyLockError`` is deprecated; ``LockFailed`` is usually more 
     appropriate.  (Martin Pool)
